--- a/speech_recognition.ipynb
+++ b/speech_recognition.ipynb
@@ -18,7 +18,7 @@
     "            audio=sr.Recognizer().listen(source)\n",
     "            sr.Recognizer().adjust_for_ambient_noise(source)\n",
     "            commend=sr.Recognizer().recognize_google(audio)\n",
-    "            open('Firefox')\n",
+    "            open('Chrome')\n",
     "            sleep(0.5)\n",
     "            typewrite(commend)\n",
     "            press('enter')\n",
