--- a/speech_recognition.ipynb
+++ b/speech_recognition.ipynb
@@ -11,20 +11,23 @@
     "from webbrowser import open\n",
     "from time import sleep\n",
     "\n",
-    "while(True):\n",
+    "while True:\n",
     "    with sr.Microphone() as source:\n",
+    "    print('speak what to search on google?\\n')\n",
     "        try:\n",
-    "            print('speak what to search on google?\\n')\n",
+    "												print('\nwaiting...')\n",
     "            audio=sr.Recognizer().listen(source)\n",
     "            sr.Recognizer().adjust_for_ambient_noise(source)\n",
     "            commend=sr.Recognizer().recognize_google(audio)\n",
+    "            print("'"+commend+"'")\n,
     "            open('Chrome')\n",
     "            sleep(0.5)\n",
     "            typewrite(commend)\n",
     "            press('enter')\n",
     "            break\n",
     "        except:\n",
-    "            print('Could not recognize, TRY AGAIN!')"
+    "            print('Could not recognize\n\n\tTRY AGAIN!')\n,"
+    "print('DONE')"
    ]
   },
   {
